--- a/style.css
+++ b/style.css
@@ -19,12 +19,13 @@
 .shopItemContainer {
   display: flex;
   flex-direction: column;
-  width: 30vw;
-  align-items: center;
+  margin-left: 40px;
+  padding: 20px;
 }
 
 .ShopItemBox {
   display: flex;
+  padding: 20px;
 }
 
 footer {
